- Added performance improvements to the status page.
- Added support for repeat reminders.
- Added the gravityflow_assignee_eamil_reminder_repeat_days filter.
    Example:
    add_filter( 'gravityflow_assignee_eamil_reminder_repeat_days', 'sh_gravityflow_assignee_eamil_reminder_repeat_days', 10, 4 );
    function sh_gravityflow_assignee_eamil_reminder_repeat_days( $form, $entry, $step, $assignee ) {
    	return 3; // Send reminders every 3 days after the initial assignee email. Return zero to disable.
    }
- Updated merge tag processing for the Assignee and User type fields to support additional user property/meta modifiers.
- Updated the gravityflow_workflow_detail_sidebar hook to include $current_step and $args as the third and fourth parameters.
- Updated the user Input button text to "Submit" instead of "Update" when the default status is hidden.
- Updated the styles of the workflow box when the sidebar is not active to remove the padding.
- Updated the activity log and reports to exclude deleted and trashed entries.
- Fixed an issue with the inbox page which would result in the no pending tasks message when an access token is used by an assignee who is a registered user but not logged in.
- Fixed an issue which prevented the value returned by the gravityflow_feedback_approval filter from being used.
- Fixed a fatal error loading the status shortcode on some sites.
- Fixed a JavaScript error on User Input steps with field conditional logic disabled.
- Fixed the bottom bulk action drop down on the status page not displaying the print modal.
- Fixed an issue which could prevent the value drop down for the Gravity View Advanced Filter Extension being populated with the Workflow Assignee choices.
- Fixed a JavaScript error on the User Input step related to conditional logic dependent fields which are not editable or display fields.
- Fixed an issue with conditional routing where the Source URL, Starred and IP fields are ignored in rules.
